# copier-example

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  catalog-info.yaml  dev-requirements.txt  pyproject.toml  test.md
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.rst
.github/actions/install_requirements/: action.yml
.github/pages/: switcher.json
.github/workflows/: _check.yml  _container.yml  _dist.yml  _docs.yml  _lint.yml  _pages.yml  _pypi.yml  _release.yml  _test.yml  ci.yml  code.yml  docs.yml  linkcheck.yml
docs/: conf.py  index.rst
docs/developer/how-to/: make-release.rst
docs/developer/tutorials/: dev-install.rst
docs/user/how-to/: run-container.rst
docs/user/reference/: api.rst
docs/user/tutorials/: installation.rst
requirements/: dev-constraints.txt  generate.sh  regenerate.sh
src/copier_example/: __init__.py  __main__.py
tests/: test_cli.py
